# FARM-full-stack-web-app

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: authentication.py  main.py  test_models.py
app/models/: car_model.py  user_model.py
app/routers/: cars.py  users.py
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: authentication.py
backend/app/models/: car_model.py  user_model.py
backend/app/routers/: cars.py  users.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AuthRequired.jsx  CarCard.jsx  CarForm.jsx  InputField.jsx  LoginForm.jsx
frontend/src/contexts/: AuthProvider.jsx
frontend/src/layouts/: RootLayout.jsx
frontend/src/loaders/: carsLoader.js
frontend/src/pages/: Cars.jsx  Login.jsx  NewCar.jsx  NotFound.jsx  SingleCar.jsx
frontend/src/utils/: fetchCarData.js
